# arb

./: .build_dependencies  .gitignore  .travis.yml  CMakeLists.txt  Makefile.in  Makefile.subdirs  README  README.md  acb.h  acb2.h  acb_calc.h  acb_dft.h  acb_dirichlet.h  acb_elliptic.h  acb_hypgeom.h  acb_mat.h  acb_modular.h  acb_poly.h  acf.h  appveyor.yml  arb-defs.h  arb.h  arb_calc.h  arb_fmpz_poly.h  arb_fpwrap.h  arb_hypgeom.h  arb_mat.h  arb_poly.h  arf.h  bernoulli.h  bool_mat.h  config.h  configure  dirichlet.h  dlog.h  double_interval.h  elefun.h  fmpcb.h  fmpcb_calc.h  fmpcb_mat.h  (+23 more)
acb/: acos.c  acosh.c  addmul.c  agm.c  agm1.c  approx_dot.c  arg.c  asin.c  asinh.c  atan.c  atanh.c  barnes_g.c  bernoulli_poly_ui.c  chebyshev_t2_ui.c  chebyshev_t_ui.c  chebyshev_u2_ui.c  chebyshev_u_ui.c  clear.c  contains_int.c  cos.c  cos_pi.c  cot.c  cot_pi.c  csc_pi.c  csch.c  csgn.c  cube.c  digamma.c  div.c  dot.c  dot_fmpz.c  dot_precise.c  dot_si.c  dot_simple.c  dot_siui.c  dot_ui.c  dot_uiui.c  exp.c  exp_invexp.c  exp_pi_i.c  (+69 more)
acb_calc/: cauchy_bound.c  integrate.c  integrate_gl_auto_deg.c  integrate_opt_init.c  integrate_taylor.c
acb_dft/: bluestein.c  convol.c  convol_dft.c  convol_fft.c  convol_mullow.c  convol_rad2.c  crt.c  cyc.c  dft_bluestein.c  dft_convol_fft.c  dft_convol_naive.c  dft_crt.c  dft_cyc.c  dft_fast.c.tmp  dft_pol.c  dft_precomp.c  dft_step.c  naive.c  precomp.c  prod.c  rad2.c  rad2_threaded.c  step.c
acb_dirichlet/: acb_chi.c  acb_pairing.c  acb_pairing_conrey.c  arb_quadratic_powers.c  arb_theta.c  arb_theta_naive.c  arb_theta_smallorder.c  backlund_s.c  backlund_s_bound.c  backlund_s_gram.c  char.c  char_clear.c  char_conductor.c  char_conrey.c  char_eq.c  char_eq_deep.c  char_first_primitive.c  char_init.c  char_is_odd.c  char_mul.c  char_next.c  char_next_primitive.c  char_normalize.c  char_one.c  char_primitive.c  char_print.c  chareval.c  charevalvec.c  chi.c  chi_theta_arb.c  chi_vec.c  chi_vec_loop.c  chi_vec_primeloop.c  chi_vec_sieve.c  conductor_ui.c  conrey.c  conrey_conductor.c  conrey_eq.c  conrey_eq_deep.c  conrey_exp.c  (+139 more)
acb_elliptic/: e.c  e_inc.c  f.c  inv_p.c  invariants.c  k.c  k_jet.c  k_series.c  p.c  p_jet.c  p_prime.c  p_series.c  pi.c  rc1.c  rf.c  rg.c  rj.c  roots.c  zeta.c
acb_hypgeom/: 0f1.c  2f1.c  2f1_choose.c  2f1_continuation.c  2f1_corner.c  2f1_direct.c  2f1_inf.c  2f1_pfaff.c  2f1_series_direct.c  2f1_transform.c  airy.c  airy_asymp.c  airy_bound.c  airy_direct.c  airy_jet.c  airy_series.c  bessel_i.c  bessel_j.c  bessel_k.c  bessel_y.c  beta_lower.c  beta_lower_series.c  chebyshev_t.c  chebyshev_u.c  chi.c  chi_series.c  ci.c  ci_series.c  coulomb.c  coulomb_jet.c  coulomb_series.c  dilog.c  dilog_bernoulli.c  dilog_bitburst.c  dilog_continuation.c  dilog_transform.c  dilog_zero.c  dilog_zero_taylor.c  ei.c  ei_series.c  (+60 more)
acb_mat/: add.c  approx_eig_qr.c  approx_inv.c  approx_lu.c  approx_mul.c  approx_solve.c  approx_solve_lu_precomp.c  approx_solve_tril.c  approx_solve_triu.c  bound_fro_norm.c  bound_frobenius_norm.c  bound_inf_norm.c  charpoly.c  clear.c  companion.c  conjugate.c  contains.c  contains_fmpq_mat.c  contains_fmpz_mat.c  count_is_zero.c  det.c  det_lu.c  det_precond.c  dft.c  diag_prod.c  eig_enclosure_rump.c  eig_global_enclosure.c  eig_multiple.c  eig_multiple_rump.c  eig_simple.c  eig_simple_rump.c  eig_simple_vdhoeven_mourrain.c  entrywise_is_zero.c  entrywise_not_is_zero.c  eq.c  equal.c  exp.c  exp_taylor_sum.c  find_pivot_partial.c  fprintd.c  (+47 more)
acb_modular/: addseq.c  delta.c  eisenstein.c  elliptic_e.c  elliptic_k.c  elliptic_k_cpx.c  elliptic_p.c  elliptic_p_zpx.c  epsilon_arg.c  eta.c  eta_sum.c  fill_addseq.c  fundamental_domain_approx.c  fundamental_domain_approx_arf.c  fundamental_domain_approx_d.c  hilbert_class_poly.c  is_in_fundamental_domain.c  j.c  lambda.c  psl2z_inv.c  psl2z_is_correct.c  psl2z_is_one.c  psl2z_mul.c  psl2z_randtest.c  theta.c  theta_1234.c  theta_1234_sum.c  theta_const_sum.c  theta_const_sum_basecase.c  theta_const_sum_rs.c  theta_jet.c  theta_jet_notransform.c  theta_series.c  theta_sum.c  theta_transform.c  transform.c
acb_poly/: add.c  add_series.c  add_si.c  agm1_series.c  atan_series.c  binomial_transform.c  binomial_transform_basecase.c  binomial_transform_convolution.c  borel_transform.c  clear.c  compose.c  compose_divconquer.c  compose_horner.c  compose_series.c  compose_series_brent_kung.c  compose_series_horner.c  contains.c  contains_fmpq_poly.c  contains_fmpz_poly.c  cos_pi_series.c  cos_series.c  cosh_series.c  cot_pi_series.c  derivative.c  digamma_series.c  div_root.c  div_series.c  divrem.c  elliptic_k_series.c  elliptic_p_series.c  equal.c  erf_series.c  evaluate.c  evaluate2.c  evaluate2_horner.c  evaluate2_rectangular.c  evaluate_horner.c  evaluate_rectangular.c  evaluate_vec_fast.c  evaluate_vec_iter.c  (+97 more)
acf/: approx_div.c  approx_dot.c  approx_sqrt.c  inlines.c
arb/: abs.c  acos.c  acosh.c  add.c  add_error.c  add_error_2exp.c  addmul.c  agm.c  approx_dot.c  asin.c  asinh.c  atan.c  atan2.c  atan_arf.c  atan_arf_bb.c  atan_frac_bsplit.c  atan_newton.c  atan_sum_bs_powtab.c  atan_sum_bs_simple.c  atan_tab.c  atan_taylor_naive.c  atan_taylor_rs.c  atanh.c  bell_fmpz.c  bin.c  (+222 more)
(+2633 files in other folders)
